--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -9,8 +9,8 @@
        <router-outlet></router-outlet>
       </div>
     </div>
-    <!-- <div class="row">
+    <div class="row">
       <app-footer ></app-footer>
-    </div> -->
+    </div>
 
 
