--- a/src/app/page-not-found-component/page-not-found-component.component.html
+++ b/src/app/page-not-found-component/page-not-found-component.component.html
@@ -1,1 +1,3 @@
-<p>Page Not Found</p>
+<div class="container" style="    min-height: 660px;     text-align: center;">
+<div class="card px-lg-4 px-md-4 px-3 py-lg-4 py-md-4 py-3 shadow"><p>Page Not Found</p></div>
+</div>
