--- a/src/app/vastu-score-check/vastu-score-tool/vastu-score-tool.component.html
+++ b/src/app/vastu-score-check/vastu-score-tool/vastu-score-tool.component.html
@@ -11,6 +11,11 @@ margin-right: 80px;">
     <div class="vaastu_score col-12 col-md-10 mx-auto">
 
       <div class="card px-lg-4 px-md-4 px-3 py-lg-4 py-md-4 py-3 shadow">
+        <div  >
+          <a  class="backIcon mb-3 d-none d-lg-inline-block d-md-inline-block" (click)="backClicked()"><img
+            src="../../assets/images/back_arrow-orange.png" alt="back_icon" />
+          <span class="d-inline-block ml-2 goback">GO BACK</span></a>
+        </div>
 
 
         <h3 class="hd-overall-vaastu-score">OVERALL VAASTU SCORE  </h3>
