--- a/src/styles.css
+++ b/src/styles.css
@@ -41,3 +41,6 @@ ul.breadcrumb li a:hover {
 .roomTypeList li span {
   color: #666666;
 }
+
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
