--- a/src/app/vastu-score-check/vastu-score-check.component.css
+++ b/src/app/vastu-score-check/vastu-score-check.component.css
@@ -6,7 +6,6 @@
   font-weight: bold;
   font-size: 14px;
   line-height: 19px;
-  /* identical to box height */
 
   letter-spacing: 0.58px;
 
@@ -207,7 +206,7 @@ h3 {
   letter-spacing: 1px;
   text-transform: uppercase;
   font-family: Noto Sans;
-
+  text-align: left;
   line-height: 24px;
   letter-spacing: 2px;
 }
